@@ -42,6 +42,7 @@ import org.junit.Before;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 
 import static org.elasticsearch.xpack.core.security.authc.RealmSettings.getFullSettingKey;
 import static org.elasticsearch.xpack.core.security.authc.ldap.PoolingSessionFactorySettings.BIND_DN;
@@ -145,14 +146,14 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
         try {
             // auth
             try (LdapSession ldap = session(sessionFactory, user, userPass)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
 
             // lookup
             try (LdapSession ldap = unauthenticatedSession(sessionFactory, user)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
@@ -217,13 +218,15 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
 
         try (LdapUserSearchSessionFactory ignored = getLdapUserSearchSessionFactory(config, sslService, threadPool)) {
             assertCriticalWarnings(
-                ("[%s] is set but no bind password is specified. Without a corresponding bind password, "
-                    + "all ldap realm authentication will fail. Specify a bind password via [%s] or [%s]. "
-                    + "In the next major release, nodes with incomplete bind credentials will fail to start.").formatted(
-                        RealmSettings.getFullSettingKey(config, BIND_DN),
-                        RealmSettings.getFullSettingKey(config, SECURE_BIND_PASSWORD),
-                        RealmSettings.getFullSettingKey(config, LEGACY_BIND_PASSWORD)
-                    )
+                String.format(
+                    Locale.ROOT,
+                    "[%s] is set but no bind password is specified. Without a corresponding bind password, "
+                        + "all ldap realm authentication will fail. Specify a bind password via [%s] or [%s]. "
+                        + "In the next major release, nodes with incomplete bind credentials will fail to start.",
+                    RealmSettings.getFullSettingKey(config, BIND_DN),
+                    RealmSettings.getFullSettingKey(config, SECURE_BIND_PASSWORD),
+                    RealmSettings.getFullSettingKey(config, LEGACY_BIND_PASSWORD)
+                )
             );
         }
     }
@@ -250,7 +253,9 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
 
         Exception ex = expectThrows(IllegalArgumentException.class, () -> getLdapUserSearchSessionFactory(config, sslService, threadPool));
         assertEquals(
-            "You cannot specify both [%s] and [%s]".formatted(
+            String.format(
+                Locale.ROOT,
+                "You cannot specify both [%s] and [%s]",
                 RealmSettings.getFullSettingKey(config, LEGACY_BIND_PASSWORD),
                 RealmSettings.getFullSettingKey(config, SECURE_BIND_PASSWORD)
             ),
@@ -286,14 +291,14 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
         try {
             // auth
             try (LdapSession ldap = session(sessionFactory, user, userPass)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
 
             // lookup
             try (LdapSession ldap = unauthenticatedSession(sessionFactory, user)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
@@ -373,14 +378,14 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
         try {
             // auth
             try (LdapSession ldap = session(sessionFactory, user, userPass)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
 
             // lookup
             try (LdapSession ldap = unauthenticatedSession(sessionFactory, user)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString(user));
             }
@@ -446,14 +451,14 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
         try {
             // auth
             try (LdapSession ldap = session(sessionFactory, user, userPass)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString("William Bush"));
             }
 
             // lookup
             try (LdapSession ldap = unauthenticatedSession(sessionFactory, user)) {
-                assertConnectionValid(ldap.getConnection(), sessionFactory.bindCredentials);
+                assertConnectionValid(ldap.getConnection(), sessionFactory.getBindRequest());
                 String dn = ldap.userDn();
                 assertThat(dn, containsString("William Bush"));
             }
@@ -595,8 +600,8 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
             new ThreadContext(globalSettings)
         );
         try (LdapUserSearchSessionFactory searchSessionFactory = getLdapUserSearchSessionFactory(config, sslService, threadPool)) {
-            assertThat(searchSessionFactory.bindCredentials, notNullValue());
-            assertThat(searchSessionFactory.bindCredentials.getBindDN(), is(emptyString()));
+            assertThat(searchSessionFactory.getBindRequest(), notNullValue());
+            assertThat(searchSessionFactory.getBindRequest().getBindDN(), is(emptyString()));
         }
         assertDeprecationWarnings(config.identifier(), false, useLegacyBindPassword);
     }
@@ -617,8 +622,8 @@ public class LdapUserSearchSessionFactoryTests extends LdapTestCase {
             new ThreadContext(globalSettings)
         );
         try (LdapUserSearchSessionFactory searchSessionFactory = getLdapUserSearchSessionFactory(config, sslService, threadPool)) {
-            assertThat(searchSessionFactory.bindCredentials, notNullValue());
-            assertThat(searchSessionFactory.bindCredentials.getBindDN(), is("cn=ironman"));
+            assertThat(searchSessionFactory.getBindRequest(), notNullValue());
+            assertThat(searchSessionFactory.getBindRequest().getBindDN(), is("cn=ironman"));
         }
         assertDeprecationWarnings(config.identifier(), false, useLegacyBindPassword);
     }
